22 May 2004 Sylvain Pion
- Make TDS::incident_cells(Vertex, OutputIterator) useful in dimension 2.
  operator==() of Triangulation_3 was relying on it.

22 May 2004 Sylvain Pion
- Use CGAL_CFG_USING_BASE_MEMBER_BUG_2 workaround for SunPRO.

20 May 2004 Sylvain Pion
- Perturbed predicate : minor changes.

18 May 2004 Sylvain Pion
- SunPRO workaround.

8 May 2004 Sylvain Pion
- test_regular_3.C : remove warning.

4 May 2004 Mariette Yvinec
- reset previous order in tab_vertex_triple_index[4][3].
  The change made test_delaunay_3 and test_delaunay_hierarchy_3.
  I will have to investifate more carefully about that later.

27 April 2004 Mariette Yvinec
- add test suite for  Regular_triangulation_euclidean_traits_3

27 April 2004 Mariette Yvinec
- changed the order in tab_vertex_triple_index[4][3]
- fixed Compute_squared_radius_smallest_orthogonal_sphere_3 in
  Regular_triangulation_euclidean_traits_3.h

9 avril 2004 Mariette Yvinec
- fixed by Mariette of the previous change

8 April 2004 Andreas Fabri
- Turned Triangulation_utils_3::vertex_triple_index 
  from a variable in a function

2 April 2004 Mariette Yvinec
- added is_Gabriel in Delaunay_triangulation_3.h + test
- slightly changed is_Gabriel in Regular_triangulation_3 to make
  the whoe more homogeneous
- is_Gabriel is still to be documented (waiting for new wrapper
  and tools of the doc)

2 April 2004 Mariette Yvinec
- fixes in Regular_triangulation_euclidean_traits_3.h
- added Side_of_bounded_orthogonal_sphere_3

25 March 2004 Radu Ursu
- made doc work with the new implementation of the Manual tools

6 Mars 2004 Mariette Yvinec
- move vertex_triple_index[4][3] to Triangulation_utils_base_3
- added is_Gabriel + test in Regular triangulation
  still to be done : add is_Gabriel in Delaunay 
                     use it in Alpha_shape

5 Mars 2004 Mariette Yvinec
- added predicates and constructions for weighted points in
   Regular_triangulation_euclidean_traits_3.h + testsuite

29 Feb 2004 Sylvain Pion